tests/ui/traits/multidispatch-bad.stderr
error[E0308]: mismatched types
  --> $DIR/multidispatch-bad.rs:19:17
   |
LL |     test(22i32, 44i32);
   |     ----        ^^^^^ expected `u32`, found `i32`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/multidispatch-bad.rs:13:4
   |
LL | fn test<T,U>(_: T, _: U)
   |    ^^^^            ----
help: change the type of the numeric literal from `i32` to `u32`
   |
LL -     test(22i32, 44i32);
LL +     test(22i32, 44u32);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
